--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-	<link rel="stylesheet" href="stylesheets/stylesheet.css">
-	<script type="text/javascript" src="javascript/search.js"></script>
 	<script type="text/javascript" src="javascript/jquery.js"></script>
+	<script type="text/javascript" src="javascript/search.js"></script>
 </head>
 <body>
+<form id="search_form">
+	<input id="location">
+	<button>Search</button>
+</form>
 </body>
 </html>
