--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -5,8 +5,13 @@
 </head>
 <body>
 <form id="search_form">
-	<input id="location">
+	<input id="city" name="city" type="radio" value="valencia">Valencia<br>
+	<input id="city" name="city" type="radio" value="caracas">Caracas<br>
+	<input id="city" name="city" type="radio" value="maracaibo">Maracaibo<br>
+	<input id="interest">
 	<button>Search</button>
 </form>
+<section id="results">
+	</section>
 </body>
 </html>
