--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -1,9 +1,14 @@
 <html>
 <head>
+	<link rel="stylesheet" href="stylesheets/stylesheet.css">
 	<script type="text/javascript" src="javascript/jquery.js"></script>
 	<script type="text/javascript" src="javascript/search.js"></script>
 </head>
 <body>
+	<header>
+		<h1>Venezuelan food search</h1>
+	</header>
+<section id="main">
 <form id="search_form">
 	<input id="city" name="city" type="radio" value="valencia">Valencia<br>
 	<input id="city" name="city" type="radio" value="caracas">Caracas<br>
@@ -13,5 +18,6 @@
 </form>
 <section id="results">
 	</section>
+</section>
 </body>
 </html>
