--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -13,11 +13,11 @@
 	<input id="city" name="city" type="radio" value="valencia">Valencia<br>
 	<input id="city" name="city" type="radio" value="caracas">Caracas<br>
 	<input id="city" name="city" type="radio" value="maracaibo">Maracaibo<br>
-	<input id="interest">
+	<input id="interest" placeholder="food type">
 	<button>Search</button>
 </form>
 <section id="results">
-	</section>
+</section>
 </section>
 </body>
 </html>
