--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 	<header>
-		<h1>Venezuelan food search</h1>
+		<h1>London food places</h1>
 	</header>
 <section id="main">
 <form id="search_form">
-	<input id="city" name="city" type="radio" value="valencia">Valencia<br>
-	<input id="city" name="city" type="radio" value="caracas">Caracas<br>
-	<input id="city" name="city" type="radio" value="maracaibo">Maracaibo<br>
+	<input id="city" name="city" type="radio" value="Old Street">Old Street<br>
+	<input id="city" name="city" type="radio" value="Angel">Angel<br>
+	<input id="city" name="city" type="radio" value="Oxford Street">Oxford Street<br>
 	<input id="interest" placeholder="food type">
 	<button>Search</button>
 </form>
