--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -3,6 +3,8 @@
 	<link rel="stylesheet" href="stylesheets/stylesheet.css">
 	<script type="text/javascript" src="javascript/jquery.js"></script>
 	<script type="text/javascript" src="javascript/search.js"></script>
+	<script type="text/javascript" src="javascript/google_maps.js"></script>
+	<script type="text/javascript" src="javascript/gmap.js"></script>
 </head>
 <body>
 	<header>
@@ -16,6 +18,8 @@
 	<input id="interest" placeholder="food type">
 	<button>Search</button>
 </form>
+	<div id="map">
+</div>
 <section id="results">
 </section>
 </section>
