finished 1st version

--- a/search-restaurants.html
+++ b/search-restaurants.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="stylesheets/reset.css">
 	<link rel="stylesheet" href="stylesheets/stylesheet.css">
 	<script type="text/javascript" src="javascript/jquery.js"></script>
 	<script type="text/javascript" src="javascript/search.js"></script>
@@ -18,9 +20,12 @@
 	<input id="interest" placeholder="food type">
 	<button>Search</button>
 </form>
-	<div id="map">
+<div id="map">
 </div>
-<section id="results">
+<section>
+	<ul id="results">
+		
+	</ul>
 </section>
 </section>
 </body>
